# PyQml-Core

./: LICENSE  README.md
pyqml-core/bindings/: PyType.hpp  Tensor.hpp  bindings.hpp  dtype.hpp  dtype_bindings.cpp  pybind_module.cpp  tensor_init.cpp  test.cu
pyqml-core/bindings/Tensor_ops/: free_ops.cpp
pyqml-core/cpp/: CMakeLists.txt
pyqml-core/cpp/include/: tensor.hpp
pyqml-core/cpp/src/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  tensor.hpp  test.cpp
pyqml-core/cpp/src/tensor_imp_files/: binary_op.tpp  cuda_alloc.cu  getter.tpp  gpu_itr.cu  itr.hpp  slice.tpp  unary_op.tpp
pyqml-core/python_pyqml/: __init__.py
pyqml-core/tests/: func_test.py  libe.py  pyqmlcore.cp313-win_amd64.pyd  test.py
